feat(expansion-panel): Add Expansion Panel component
closes #46

--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
           "dialog",
           "drawer",
           "elevation",
+          "expansion-panel",
           "fab",
           "form-field",
           "grid-list",
@@ -168,6 +169,7 @@
     "mdc-line-ripple",
     "mdc-checkbox",
     "mdc-chips",
+    "mdc-expansion-panel",
     "mdc-form-field",
     "mdc-icon-toggle",
     "mdc-menu",
