--- a/packages/material-components-web/package.json
+++ b/packages/material-components-web/package.json
@@ -24,6 +24,7 @@
     "@material/dialog": "^0.29.0",
     "@material/drawer": "^0.29.0",
     "@material/elevation": "^0.28.0",
+    "@material/expansion-panel": "^0.29.0",
     "@material/fab": "^0.29.0",
     "@material/form-field": "^0.29.0",
     "@material/grid-list": "^0.29.0",
